# serialization_list

./: .gitignore  CMakeLists.txt  README.md  config.cfg
app/: main.cpp
include/: app.hpp  config.hpp  list_node.hpp  list_operator.hpp  list_parser.hpp  list_reader.hpp
src/: app.cpp  config.cpp  list_operator.cpp  list_parser.cpp  list_reader.cpp
tests/: CMakeLists.txt  test_edge_cases.cpp  test_parse.cpp  test_paths.hpp  test_serialization.cpp  test_storage.cpp
